# udn-browser

./: .gitignore  CONTRIBUTORS.json  LICENSE  README.md  asset-manifest.json  bundle.js.LICENSE.txt  config-overrides.js  index.html  package-lock.json  package.json  pyproject.toml  webpack.config.js
assets/: index-23fc48cb.js  index-81045670.js  index-90208594.css  index-9c255367.js
public/: index.html  manifest.json
scripts/: extract_go_terms.py
src/: App.css  App.js  App.scss  Facets.js  GeneSearchBox.js  GeneTable.js  HiglassBrowser.js  chrom-utils.js  config.js  gene-data-utils.js  index.html  index.js  viewConfig.clinvar.json  viewConfig.gnomad.json  viewConfig.json  viewConfig.orthologs.json  viewConfig.transcripts.json
static/css/: main.2c084d36.css  main.2c084d36.css.map
static/js/: 787.6188a80b.chunk.js  787.6188a80b.chunk.js.map  main.7e12ab9b.js.LICENSE.txt
