[tool.poetry]
name = "cohort-browser-supplemental-tools"
version = "0.0.1"
description = "Dummy application to allow for license testing."
authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
license = "MIT"
readme = "README.txt"
packages = [
  { include="src", from="." }
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"

dcicutils = "^7.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "static: mark as a test that is testing the static form of code, not its runtime functionality",
]
